tests/ui/parser/misspelled-keywords/unsafe-fn.stderr
error: expected one of `!` or `::`, found keyword `fn`
  --> $DIR/unsafe-fn.rs:1:9
   |
LL | unsafee fn code() {}
   |         ^^ expected one of `!` or `::`

error: aborting due to 1 previous error

